--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+client_secret_466724563377-lbfuln359gn1fkcnm41vk92fiqmvt825.apps.googleusercontent.com.json
+sha.txt
