--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,3 +57,16 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.google.android.gms:play-services-auth:15.0.1'
+    compile 'pub.devrel:easypermissions:0.3.0'
+    compile('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    compile('com.google.apis:google-api-services-<API>-<VERSION>') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+}
