--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   cloud_firestore: ^4.0.4
+  url_launcher: ^6.1.6
+  googleapis_auth: ^1.3.1
 
 dev_dependencies:
   flutter_test:
