--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,8 +39,12 @@ android {
         applicationId "com.example.calsync"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+//        minSdkVersion flutter.minSdkVersion
+//        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 21
+        targetSdkVersion 33
+        compileSdkVersion 33
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -58,8 +62,23 @@ flutter {
     source '../..'
 }
 
+//dependencies {
+//    implementation 'com.android.support:multidex:1.0.3'
+//    implementation 'com.google.api-client:google-api-client:2.0.0'
+//    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+//    implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
+//    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+//}
+
 dependencies {
-    implementation 'com.google.api-client:google-api-client:2.0.0'
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
-    implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.google.android.gms:play-services-auth:20.3.0'
+    compile 'pub.devrel:easypermissions:0.3.0'
+    compile('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    compile('com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
 }
