--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.0.4
   url_launcher: ^6.1.6
   googleapis_auth: ^1.3.1
+  firebase_storage: ^11.0.5
 
 dev_dependencies:
   flutter_test:
