--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   googleapis: ^9.2.0
+  google_sign_in: ^5.4.2
+  http: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
