fix: fixing config errors from firebase and gcp
Signed-off-by: tiwaojo <tiwaojo@gmail.com>

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,9 +41,10 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
 //        minSdkVersion flutter.minSdkVersion
 //        targetSdkVersion flutter.targetSdkVersion
-        minSdkVersion 21
-        compileSdkVersion flutter.compileSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 28
+        targetSdkVersion 33
+        compileSdkVersion 33
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
