--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,5 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-client_secret_466724563377-lbfuln359gn1fkcnm41vk92fiqmvt825.apps.googleusercontent.com.json
+assets/client_secret.json
 sha.txt
