--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   url_launcher: ^6.1.6
   googleapis_auth: ^1.3.1
   firebase_storage: ^11.0.5
+  firebase_core: ^2.2.0
+  #  firebase_auth: ^0.6.2+1
+  extension_google_sign_in_as_googleapis_auth: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - client_secret.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
