style: adding basic styles and themes. WIP
Signed-off-by: tiwaojo <tiwaojo@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,9 @@
     "--privileged"
   ],
   "extensions": [
-    "dart-code.flutter"
+    "dart-code.flutter",
+    "alexisvt.flutter-snippets",
+    "Dart-Code.flutter"
   ],
   "workspaceMount": "source=${localWorkspaceFolder}/workspace,target=/home/developer/workspace,type=bind,consistency=delegated",
   "workspaceFolder": "/home/developer/workspace"
