--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   material: ^1.0.0+2
   flutter_native_splash: ^2.2.14
   curved_navigation_bar: ^1.0.3
+  shared_preferences: ^2.0.15
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
