--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,3 +62,17 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
+
+
+    // TODO: Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
+    // https://firebase.google.com/docs/android/setup#available-libraries
+    implementation 'com.google.firebase:firebase-firestore'
+
+    // When NOT using the BoM, you must specify versions in Firebase library dependencies
+//    implementation 'com.google.firebase:firebase-firestore:24.4.0'
+}
