--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,15 @@ dependencies:
   cloud_firestore: ^4.1.0
   url_launcher: ^6.1.6
   googleapis_auth: ^1.3.1
-  firebase_storage: ^11.0.6
-  firebase_core: ^2.3.0
-  #  firebase_auth: ^0.6.2+1
+  firebase_storage: ^11.0.5
+  firebase_core: ^2.2.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.7
+  ionicons: ^0.2.1
+  material: ^1.0.0+2
+  flutter_native_splash: ^2.2.14
+  curved_navigation_bar: ^1.0.3
+  shared_preferences: ^2.0.15
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +80,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - client_secret.json
+    - client_secret-IOS.plist
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
