fix: shared prefs, Google auth(can now view calendars). Reconfigured the proj under a new name

--- a/assets/client_secret-IOS.plist
+++ b/assets/client_secret-IOS.plist
@@ -3,12 +3,12 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>466724563377-na4725bb0fmgl93mhrqj60brcbpehqkg.apps.googleusercontent.com</string>
+	<string>209176434525-jvffc44tf0qjocbrbjrmbib4mcdaipf0.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.466724563377-na4725bb0fmgl93mhrqj60brcbpehqkg</string>
+	<string>com.googleusercontent.apps.209176434525-jvffc44tf0qjocbrbjrmbib4mcdaipf0</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.calsync</string>
+	<string>com.example.calendarSync</string>
 </dict>
 </plist>
