--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: calsync
+name: calendar_sync
 description: SOFE 4640U Mobile Calendar Application
 
 # The following line prevents the package from being accidentally published to
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '>=2.18.4 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,29 +31,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  googleapis: ^9.2.0
-  google_sign_in: ^5.4.2
-  http: ^0.13.5
-  syncfusion_flutter_calendar: ^20.3.57
-  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.5
-  google_fonts: ^3.0.1
-  cloud_firestore: ^4.1.0
-  url_launcher: ^6.1.6
-  googleapis_auth: ^1.3.1
-  firebase_storage: ^11.0.5
-  firebase_core: ^2.2.0
+  cupertino_icons: ^1.0.2
+  provider: ^6.0.4
+  shared_preferences: ^2.0.15
+  flutter_native_splash: ^2.2.15
   extension_google_sign_in_as_googleapis_auth: ^2.0.7
+  firebase_core: ^2.3.0
+  firebase_storage: ^11.0.6
+  googleapis_auth: ^1.3.1
+  cloud_firestore: ^4.1.0
+  google_fonts: ^3.0.1
+  syncfusion_flutter_calendar: ^20.3.58
+  google_sign_in: ^5.4.2
+  googleapis: ^9.2.0
+  intl: ^0.17.0
+  url_launcher: ^6.1.6
   ionicons: ^0.2.1
   material: ^1.0.0+2
-  flutter_native_splash: ^2.2.14
   curved_navigation_bar: ^1.0.3
-  shared_preferences: ^2.0.15
-  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,8 +78,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - client_secret.json
-    - client_secret-IOS.plist
+   - client_secret.json
+#   - client_secret-IOS.plist
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
