--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "calsync" "\0"
+            VALUE "FileDescription", "calendar_sync" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "calsync" "\0"
+            VALUE "InternalName", "calendar_sync" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "calsync.exe" "\0"
-            VALUE "ProductName", "calsync" "\0"
+            VALUE "OriginalFilename", "calendar_sync.exe" "\0"
+            VALUE "ProductName", "calendar_sync" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
