--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   ionicons: ^0.2.1
   material: ^1.0.0+2
   curved_navigation_bar: ^1.0.3
+  sqflite:
+  path:
 
 dev_dependencies:
   flutter_test:
