--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   material: ^1.0.0+2
   curved_navigation_bar: ^1.0.3
   smooth_page_indicator: ^1.0.0+2
+  sqflite: ^2.0.0+3
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
