fix: minor fixes. styles: styled some pages and components. Implemented material 3(WIP). Added launcher icon

--- a/assets/flutter_native_splash.yaml
+++ b/assets/flutter_native_splash.yaml
@@ -1,3 +1,5 @@
+# Run below to add native splash screen
+# flutter clean && flutter pub get && flutter pub run flutter_native_splash:create --path=assets/flutter_native_splash.yaml
 flutter_native_splash:
   # This package generates native code to customize Flutter's default white native splash screen
   # with background color and splash image.
@@ -18,7 +20,7 @@ flutter_native_splash:
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  image: assets/images/calsync_logo.png
+  image: assets/images/calsync_logo-dark.png
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
