--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "calendar_sync",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#42a5f5",
+    "theme_color": "#042a49",
     "description": "SOFE 4640U Mobile Calendar Application",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
